data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_725.wast
;; 6. **Test Description**: A loop with a `br_if` instruction where the condition uses local variable comparisons. The loop should exit when the local variables satisfy the condition.    - **Constraint**: Ensures `br_if` correctly evaluates conditions involving local variable comparisons.    - **Differential Behavior**: The loop does not break when local variables meet the condition due to incorrect evaluation.

(assert_invalid 
  (module 
    (func $compare_locals 
      (local i32 i32) 
      local.get 0 
      local.get 1 
      i32.lt_s 
      (loop (result i32) 
        local.get 0 
        local.get 1 
        i32.lt_s 
        br_if 0
        end) 
      drop
    )
  ) 
  "type mismatch"
)